--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,7 @@ footer {
     text-align: center;
     line-height: 100px;
 }
-center{
-    positi
-
-}
+ .insta{
+    height: 50px;
+    width: 50px;
+ }
