--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,11 +8,11 @@ body {
         
 footer {
     position: relative;
-    bottom: 0;
+    top: 668px;
     background-color: gainsboro;
     color: gray;
     width: 100%;
-    height: 100px;    
+    height: 200px;    
     text-align: center;
     line-height: 100px;
 }
@@ -31,7 +31,7 @@ footer {
  }
 
  fieldset{
-    position: relative;
+    position: static;
  }
 
  header {
@@ -53,20 +53,32 @@ footer {
    width: 100%;
    padding-top: 100px;
    padding-left: 315px; 
+   height: 300px;
+   width: 200px;
  }
 
  p{
    margin-left: 400px ;
    justify-content: center;
- }
-
- input#btImg{
- 
- }
-
- .filme{
-   display: flex;
-   flex-direction:column ;
    height: 300px;
-   width: 200px;
+   width: 500px;
  }
+
+ .Watch{
+  padding-top: 150px;
+  float: left;
+ padding-left: 150px;
+ }
+
+ .fofo{
+  position: relative;
+  bottom: 1000px;
+ }
+
+ .Texto{
+
+  padding-top: 200px;
+
+ }
+
+
